--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/app.scss
@@ -143,6 +143,10 @@ h3 {
   @apply max-md:pb-10;
 }
 
+.zoomed-img {
+  @apply absolute left-0 top-0 z-10 m-0 block h-full w-full max-w-full cursor-zoom-out rounded-2xl bg-no-repeat;
+}
+
 .grid-columns {
   @apply h-full flex flex-col md:grid grid-rows-[auto_minmax(0,1fr)] gap-x-8 gap-y-5;
   grid-template-columns: 275px repeat(2, minmax(0, 1fr)) 275px;
