--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -37,6 +37,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             })
         "
         class="header sticky left-0 right-0 top-0 z-[36] flex flex-col justify-items-stretch p-3 md:pointer-events-none"
+        :style="`opacity: ${$store.main.opacityOnZoom}`"
 >
     <div id="header-shadow"
          class="pointer-events-none absolute -top-1 left-0 right-0 -z-10 h-[calc(100%+20px)] -translate-y-full bg-gradient-to-b from-shadow to-transparent transition-all duration-300 ease-linear will-change-transform md:hidden"
@@ -122,7 +123,9 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <div id="end-of-header"></div>
 </header>
 
-<div class="pointer-events-none sticky top-[88px] z-30 h-[1px] max-md:hidden">
+<div class="pointer-events-none sticky top-[88px] z-30 h-[1px] max-md:hidden"
+     :style="`opacity: ${$store.main.opacityOnZoom}`"
+>
     <div class="absolute inset-x-0 -top-[72px] col-start-3 flex min-h-[56px] items-center justify-center text-primary-500">
         <a href="<?= $escaper->escapeUrl($block->getUrl('')) ?>"
            x-element-transition-trigger
