--- a/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/product/view/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Review/templates/product/view/list.phtml
@@ -36,7 +36,7 @@ $productName = $block->getProduct()->getName();
 ?>
 <?php if (count($items)): ?>
     <div
-        class="mx-auto px-5 content-wrapper"
+        class="mx-auto mt-8 px-5 content-wrapper"
         id="customer-review-list"
         aria-label="<?= $escaper->escapeHtmlAttr(__('Customer Reviews')) ?>"
         tabindex="-1"
