--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -99,7 +99,7 @@ $mixBackground = true;
                                 <?= $template->setData('for_cart_page', false)->render('Magento_Theme::html/header/cart/minicart-quantity-controls.phtml') ?>
                             </div>
                             <div
-                                class="flex flex-col items-center justify-between text-md text-primary-500 <?= $isCartPage ? 'md:items-start mt-3' : '' ?>"
+                                class="price <?= $isCartPage ? 'mt-3' : '' ?>"
                                 x-text="hyva.formatPrice(item.product_price_value)">
                             </div>
                         </div>
