--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/head/head-styles.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/head/head-styles.phtml
@@ -1,172 +1,117 @@
 <style>
-@font-face {
-  font-family: 'Satoshi';
-  src: url("<?= $this->getViewFileUrl('fonts/Satoshi-Medium.woff2') ?>") format('woff2'),
-    url("<?= $this->getViewFileUrl('fonts/Satoshi-Medium.woff') ?>") format('woff');
-  font-weight: 500;
-  font-display: swap;
-  font-style: normal;
-}
+    @font-face {
+        font-family: 'Satoshi';
+        src: url("<?= $this->getViewFileUrl('fonts/Satoshi-Medium.woff2') ?>") format('woff2'),
+        url("<?= $this->getViewFileUrl('fonts/Satoshi-Medium.woff') ?>") format('woff');
+        font-weight: 500;
+        font-display: swap;
+        font-style: normal;
+    }
 
-@font-face {
-  font-family: 'Satoshi';
-  src: url("<?= $this->getViewFileUrl('fonts/Satoshi-Bold.woff2') ?>") format('woff2'),
-    url("<?= $this->getViewFileUrl('fonts/Satoshi-Bold.woff') ?>") format('woff');
-  font-weight: 700;
-  font-display: swap;
-  font-style: normal;
-}
+    @font-face {
+        font-family: 'Satoshi';
+        src: url("<?= $this->getViewFileUrl('fonts/Satoshi-Bold.woff2') ?>") format('woff2'),
+        url("<?= $this->getViewFileUrl('fonts/Satoshi-Bold.woff') ?>") format('woff');
+        font-weight: 700;
+        font-display: swap;
+        font-style: normal;
+    }
 
-:root {
-  --font-body-family: 'Satoshi', sans-serif;
-  --font-body-style: 'normal';
-  --font-body-weight: 500;
+    :root {
+        --font-body-family: 'Satoshi', sans-serif;
+        --font-body-style: 'normal';
+        --font-body-weight: 500;
 
-  --font-heading-family: 'Satoshi', sans-serif;
-  --font-heading-style: 'normal';
-  --font-heading-weight: 700;
+        --font-heading-family: 'Satoshi', sans-serif;
+        --font-heading-style: 'normal';
+        --font-heading-weight: 700;
 
-  --media-border-opacity: 1.0;
-  --media-border-width: 0px;
-  --media-radius: 16px;
-  --media-shadow-opacity: 0.1;
-  --media-shadow-horizontal-offset: 0px;
-  --media-shadow-vertical-offset: 0px;
-  --media-shadow-blur-radius: 0px;
+        --progress-bar-color: #29d;
+        --progress-bar-height: 2px;
 
-  --page-width: 0rem;
-  --page-width-margin: 0rem;
+        --fade-in-bg: #F3F3F3;
 
-  --card-corner-radius: 0.0rem;
-  --card-shadow-vertical-offset: 0.0rem;
+        --color-primary-50: #7e7e7e;
+        --color-primary-100: #4b4b4b;
+        --color-primary-400: #252525;
+        --color-primary-500: #181818;
+        --color-primary-600: #0b0b0b;
+        --color-primary-700: #3F3F3F;
 
-  --badges-border-opacity: 1.0;
-  --badges-border-width: 0px;
-  --badge-corner-radius: 40px;
-  --badge-shadow-opacity: 0.1;
-  --badge-shadow-horizontal-offset: 0px;
-  --badge-shadow-vertical-offset: 0px;
-  --badge-shadow-blur-radius: 0px;
-
-  --grid-desktop-vertical-spacing: 16px;
-  --grid-desktop-horizontal-spacing: 16px;
-  --grid-mobile-vertical-spacing: 8px;
-  --grid-mobile-horizontal-spacing: 8px;
-
-  --buttons-border-opacity: 1.0;
-  --buttons-border-width: 1px;
-  --buttons-radius: 8px;
-  --buttons-shadow-opacity: 0.0;
-  --buttons-shadow-horizontal-offset: 0px;
-  --buttons-shadow-vertical-offset: 0px;
-  --buttons-shadow-blur-radius: 0px;
-
-  --inputs-border-width: 1px;
-  --inputs-border-opacity: 1.0;
-  --inputs-radius: 8px;
-  --inputs-shadow-opacity: 0.0;
-  --inputs-shadow-horizontal-offset: 0px;
-  --inputs-shadow-vertical-offset: 0px;
-  --inputs-shadow-blur-radius: 0px;
-
-  --card-border-width: 0px;
-  --card-border-opacity: 0.0;
-  --card-border-radius: 0px;
-  --card-shadow-opacity: 0.1;
-  --card-shadow-horizontal-offset: 0px;
-  --card-shadow-vertical-offset: 0px;
-  --card-shadow-blur-radius: 0px;
-
-  --progress-bar-color: #29d;
-  --progress-bar-height: 2px;
-
-  --fade-in-bg: #F3F3F3;
-
-  --color-primary-50: #d4dad2;
-  --color-primary-100: #9eab9b;
-  --color-primary-400: #768872;
-  --color-primary-500: #6a7a66;
-  --color-primary-600: #5e6c5a;
-  --color-primary-700: #525e4f;
-
-  --color-background-50: #ffffff;
-  --color-background-100: #ffffff;
-  --color-background-400: #ffffff;
-  --color-background-500: #f5f8f6;
-  --color-background-600: #e6ede9;
-  --color-background-700: #d7e3db;
-
-  /* On dark bg, lighter color is lighter */
-  /* On light bg, lighter color is darker */
-
-  /* bg_is_darker: false; */
-  --color-primary-800: #6a7a66;
-  --color-text-50: #000000;
-  --color-text-100: #000000;
-  --color-text-400: #292424;
-  --color-text-500: #363030;
-  --color-text-600: #443c3c;
-  --color-text-700: #514848;
-  --color-overlay: #18181833;
-  --color-overlay-dark: #18181866;
-  --header-shadow: 0 10px 8px rgb(0 0 0 / 0.04);
-
-  --color-secondary-50: #ffffff;
-  --color-secondary-100: #f6f6f5;
-  --color-secondary-400: #d0d2cc;
-  --color-secondary-500: #c4c6bf;
-  --color-secondary-600: #b8bab2;
-  --color-secondary-700: #abaea4;
-}
-
-/* On dark bg, lighter color should become even lighter */
-/* On light bg, lighter color should become darker */
-
-@media (prefers-contrast: more) {
-  :root {
-
-    /* bg_is_darker: false; */
-    --color-text-50: #000000;
-    --color-text-100: #000000;
-    --color-text-400: #0e0c0c;
-    --color-text-500: #1b1818;
-    --color-text-600: #292424;
-    --color-text-700: #363030;
-
-    --color-primary-50: #000000;
-    --color-primary-100: #222720;
-    --color-primary-400: #465043;
-    --color-primary-500: #525e4f;
-    --color-primary-600: #5e6c5a;
-    --color-primary-700: #6a7a66;
-  }
-}
+        --color-background-50: #ffffff;
+        --color-background-100: #ffffff;
+        --color-background-400: #ffffff;
+        --color-background-500: #ffffff;
+        --color-background-600: #f2f2f2;
+        --color-background-700: #e6e6e6;
 
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
+        /* On dark bg, lighter color is lighter */
+        /* On light bg, lighter color is darker */
 
-html {
-  box-sizing: border-box;
-  height: 100%;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
-}
+        /* bg_is_darker: false; */
+        --color-primary-800: #181818;
+        --color-text-50: #000000;
+        --color-text-100: #0f0f0f;
+        --color-text-400: #353535;
+        --color-text-500: #424242;
+        --color-text-600: #4f4f4f;
+        --color-text-700: #5c5c5c;
+        --color-overlay: #18181833;
+        --color-overlay-dark: #18181866;
+        --header-shadow: 0 10px 8px rgb(0 0 0 / 0.04);
 
-body {
-  display: grid;
-  grid-template-rows: 1fr auto;
-  min-height: 100%;
-  margin: 0;
-  font-size: 1rem;
-  line-height: calc(1 + 0.8 / var(--font-body-scale));
-  font-family: var(--font-body-family);
-  font-style: var(--font-body-style);
-  font-weight: var(--font-body-weight);
-}
+        --color-secondary-50: #ffffff;
+        --color-secondary-100: #ffffff;
+        --color-secondary-400: #ffffff;
+        --color-secondary-500: #f5f5f5;
+        --color-secondary-600: #e8e8e8;
+        --color-secondary-700: #dcdcdc;
+    }
+
+    /* On dark bg, lighter color should become even lighter */
+    /* On light bg, lighter color should become darker */
+
+    @media (prefers-contrast: more) {
+        :root {
+
+            /* bg_is_darker: false; */
+            --color-text-50: #000000;
+            --color-text-100: #000000;
+            --color-text-400: #1c1c1c;
+            --color-text-500: #292929;
+            --color-text-600: #353535;
+            --color-text-700: #424242;
+
+            --color-primary-50: #000000;
+            --color-primary-100: #000000;
+            --color-primary-400: #000000;
+            --color-primary-500: #000000;
+            --color-primary-600: #0b0b0b;
+            --color-primary-700: #181818;
+        }
+    }
+
+    *,
+    *::before,
+    *::after {
+        box-sizing: inherit;
+    }
+
+    html {
+        box-sizing: border-box;
+        height: 100%;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        font-size: 16px;
+    }
+
+    body {
+        display: grid;
+        grid-template-rows: 1fr auto;
+        min-height: 100%;
+        margin: 0;
+        font-size: 1rem;
+    }
 </style>
