--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/logo.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/logo.phtml
@@ -51,6 +51,7 @@ $estimated_width = $text_length * 12;
     <!-- Mobile logo -->
     <img
         class="object-contain h-[32px] w-auto md:hidden"
+        style="max-width: <?= $logoWidth > 500 ? 500 : $logoWidth ?>px"
         src="<?= $escaper->escapeUrl($logoSrc) ?>"
         alt="<?= $escaper->escapeHtmlAttr($block->getLogoAlt() ? $block->getLogoAlt() : $storeName) ?>"
         width="<?= $escaper->escapeHtmlAttr($logoWidth ?? 200) ?>"
