--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_button.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_button.scss
@@ -1,9 +1,5 @@
 .button {
-  @apply focus-visible:focus-ring relative inline-flex h-11 cursor-pointer touch-manipulation items-center justify-center whitespace-nowrap rounded-[--buttons-radius] px-6 text-md font-medium leading-tight transition-all duration-200;
-  box-shadow: var(--buttons-shadow-horizontal-offset)
-    var(--buttons-shadow-vertical-offset) var(--buttons-shadow-vertical-offset)
-    var(--buttons-shadow-blur-radius)
-    rgba(0, 0, 0, var(--buttons-shadow-opacity));
+  @apply focus-visible:focus-ring relative inline-flex h-11 cursor-pointer touch-manipulation items-center justify-center whitespace-nowrap rounded-sm px-6 text-md font-medium leading-tight transition-all duration-200;
 
   @screen md {
     @apply h-12;
@@ -15,7 +11,7 @@
     }
 
     &-md {
-      @apply rounded-[--buttons-radius] px-6 py-3;
+      @apply rounded-sm px-6 py-3;
     }
   }
 
@@ -39,9 +35,7 @@
 
   &--outline {
     &-primary {
-      @apply border-solid border-primary-500 border-opacity-[--buttons-border-opacity] bg-transparent text-primary-500;
-
-      border-width: var(--buttons-border-width);
+      @apply border-1 border-solid border-primary-600 bg-transparent text-primary-600;
 
       &:not(.button--disabled) {
         @apply md:hover:border-primary-700 md:hover:bg-primary-700 md:hover:text-bg-500;
@@ -49,9 +43,7 @@
     }
 
     &-secondary {
-      @apply border-solid border-text-700 border-opacity-[--buttons-border-opacity] bg-transparent;
-
-      border-width: var(--buttons-border-width);
+      @apply border-1 border-solid border-text-700 bg-transparent;
 
       &:not(.button--disabled) {
         @apply md:hover:border-primary-500 md:hover:bg-bg-400 md:hover:text-primary-500 md:active:bg-bg-100;
