--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_card-product.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_card-product.scss
@@ -1,10 +1,6 @@
 .card-product {
   &__badge-container {
-    @apply absolute border-black border-opacity-[--badges-border-opacity];
-    border-width: var(--badges-border-width);
-    box-shadow: var(--badge-shadow-horizontal-offset)
-      var(--badge-shadow-vertical-offset) var(--badge-shadow-vertical-offset)
-      var(--badge-shadow-blur-radius) rgba(0, 0, 0, var(--badge-shadow-opacity));
+    @apply absolute border-black;
 
     &.top {
       @apply top-3;
@@ -17,13 +13,13 @@
     &.left {
       @apply left-0;
 
-      border-radius: 0 var(--badge-corner-radius) var(--badge-corner-radius) 0;
+      border-radius: 0 40px 40px 0;
     }
 
     &.right {
       @apply right-0;
 
-      border-radius: var(--badge-corner-radius) 0 0 var(--badge-corner-radius);
+      border-radius: 40px 0 0 40px;
+    }
     }
   }
-}
