--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_input.scss
@@ -30,20 +30,14 @@ input[type="search"] {
   }
 
   &__field {
-    @apply md:focus-visible:focus-ring relative h-11 w-full min-w-0 appearance-none rounded-[--inputs-radius] border-solid border-text-700 border-opacity-[--inputs-border-opacity] bg-bg-500 px-4 text-[16px] text-text-700 transition-[background,color,border-color] duration-200 placeholder:text-text-700 md:hover:border-primary-500 md:hover:bg-bg-400   md:hover:text-primary-500 md:focus-visible:bg-bg-100;
-
-    border-width: var(--inputs-border-width);
-    box-shadow: var(--inputs-shadow-horizontal-offset)
-      var(--inputs-shadow-vertical-offset) var(--inputs-shadow-vertical-offset)
-      var(--inputs-shadow-blur-radius)
-      rgba(0, 0, 0, var(--inputs-shadow-opacity));
+    @apply md:focus-visible:focus-ring relative h-11 w-full min-w-0 appearance-none rounded-sm border-1 border-solid border-text-700 bg-bg-500 px-4 text-[16px] text-text-700 transition-[background,color,border-color] duration-200 placeholder:text-text-700 md:hover:border-primary-500 md:hover:bg-bg-400 md:hover:text-primary-500 md:focus-visible:bg-bg-100;
 
     &:focus-visible {
       @apply border-primary-500 shadow-input;
     }
 
     &--outline {
-      @apply border-text-700 border-opacity-[--inputs-border-opacity] bg-transparent;
+      @apply border-text-700 bg-transparent;
     }
 
     &--filled {
