INTERNAL-456: Update content types color scheme

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_newsletter.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_newsletter.style.less
@@ -51,7 +51,7 @@
 
 .satoshi-newsletter button {
   width: 100%;
-  background-color: #6a7a66;
+  background-color: #181818;
   color: #ffffff;
   position: relative;
   display: inline-flex;
