--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_quotes.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_quotes.style.less
@@ -1,6 +1,6 @@
 .quotes {
   padding: 48px;
-  background-color: #d0d2cc;
+  background-color: #f5f5f5;
 }
 
 [data-appearance="contained"] .quotes {
@@ -31,9 +31,9 @@
   font-size: 20px;
   border-width: 1px;
   border-style: solid;
-  border-color: #5e6c5a;
+  border-color: #0b0b0b;
   background-color: transparent;
-  color: #5e6c5a;
+  color: #0b0b0b;
   position: relative;
   display: inline-flex;
   cursor: pointer;
