--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_rich-text.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_rich-text.style.less
@@ -22,7 +22,7 @@
 }
 
 .rich-text__button svg {
-  color: #6a7a66;
+  color: #181818;
   display: inline;
   fill: currentColor;
   stroke: currentColor;
