--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_slider.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_slider.style.less
@@ -15,7 +15,7 @@
 
   .slider ::-webkit-scrollbar-thumb {
     border-radius: 8px;
-    background-color: #d7e3db;
+    background-color: #e6e6e6;
   }
 }
 
@@ -50,9 +50,9 @@
   padding-right: 0;
   font-size: 20px;
   border-style: solid;
-  border-color: #6a7a66;
+  border-color: #181818;
   background-color: transparent;
-  color: #6a7a66;
+  color: #181818;
   border-width: 1px;
   position: relative;
   display: inline-flex;
@@ -183,7 +183,7 @@
 }
 
 .view-all a {
-  background-color: #6a7a66;
+  background-color: #181818;
   color: rgb(255, 255, 255);
   height: 48px;
   position: relative;
