--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_categories.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_categories.style.less
@@ -33,8 +33,8 @@
 
 .card-category article > div:first-of-type > div {
   transition-property: transform;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-  transition-duration: .15s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
   background-color: #f3f3f3;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .card-category .card-placeholder {
-  background-color: #d0d2cc;
+  background-color: #f5f5f5;
   border-radius: 12px;
   overflow: hidden;
   z-index: 10;
