--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_collage.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_collage.style.less
@@ -88,7 +88,7 @@
   transition-duration: 0.15s;
   object-position: center;
   object-fit: cover;
-  background-color: #d0d2cc;
+  background-color: #f5f5f5;
   width: 100%;
   height: 100%;
 }
