--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-banner.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-banner.style.less
@@ -27,7 +27,7 @@
   object-position: center;
   -o-object-fit: cover;
   object-fit: cover;
-  background-color: #d0d2cc;
+  background-color: #f5f5f5;
   width: 100%;
   height: 100%;
   z-index: 0;
@@ -134,7 +134,7 @@
   transition-duration: 0.2s;
   height: 48px;
   background-color: #ffffff;
-  color: #5e6c5a;
+  color: #0b0b0b;
 }
 
 .image-banner__btn svg {
