--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-with-text.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-with-text.style.less
@@ -20,7 +20,7 @@
 }
 
 .image-with-text__button {
-  background-color: #6a7a66;
+  background-color: #181818;
   color: #fff;
   display: inline-flex;
   height: 3rem;
@@ -55,7 +55,7 @@
 .image-with-text__image svg {
   width: 100%;
   object-fit: cover;
-  background-color: #d0d2cc;
+  background-color: #f5f5f5;
   min-height: 300px;
   object-position: center;
 }
