--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_product-card.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_product-card.style.less
@@ -89,7 +89,11 @@
   position: relative;
 }
 
-.card-product > a > article > div:first-of-type > div:not(.card-product__badge-container) {
+.card-product
+  > a
+  > article
+  > div:first-of-type
+  > div:not(.card-product__badge-container) {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.15s;
@@ -102,7 +106,12 @@
   display: flex;
 }
 
-.card-product > a > article > div:first-of-type > div:not(.card-product__badge-container) > img {
+.card-product
+  > a
+  > article
+  > div:first-of-type
+  > div:not(.card-product__badge-container)
+  > img {
   mix-blend-mode: darken;
   -o-object-position: center;
   object-position: center;
@@ -114,7 +123,7 @@
 }
 
 .card-product .placeholder-svg {
-  background-color: #d0d2cc;
+  background-color: #f5f5f5;
   border-radius: 12px;
   overflow: hidden;
   position: relative;
@@ -122,8 +131,8 @@
 
 .card-product .placeholder-svg svg {
   transition-property: transform;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-  transition-duration: .15s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
   width: 100%;
   height: 100%;
   aspect-ratio: 0.75;
@@ -189,9 +198,9 @@
   > div:last-of-type
   > div:last-of-type
   .price-box
-.price,
+  .price,
 .card-product > article .price-box span {
-  color: #5e6c5a;
+  color: #0b0b0b;
 }
 
 @media (min-width: 768px) {
