--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_shop-the-look.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_shop-the-look.style.less
@@ -21,7 +21,7 @@
 }
 
 .shop-the-look-img svg {
-  background-color: #d0d2cc;
+  background-color: #f5f5f5;
   width: 100%;
   min-height: 500px;
   fill: currentColor;
@@ -65,7 +65,7 @@
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.15s;
-  background-color: #6a7a66;
+  background-color: #181818;
   border-radius: 50%;
   transform-origin: center;
   width: 24px;
