--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_video.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_video.style.less
@@ -34,13 +34,17 @@
   width: 100%;
   object-fit: cover;
   object-position: center;
-  background-color: #d0d2cc;
+  background-color: #f5f5f5;
 }
 
 .satoshi-video .video__intro {
   padding-left: 16px;
   padding-right: 16px;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6));
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.6)
+  );
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -62,7 +66,7 @@
 }
 
 .satoshi-video .video__intro--container h1 {
-  color: #6a7a66;
+  color: #181818;
   font-size: 36px !important;
   line-height: 40px !important;
   margin: 0 0 32px 0 !important;
