INTERNAL-456: Fix header buttons color

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
@@ -34,7 +34,7 @@ $cartTotals = $cart->getSerializedCartTotals();
     :class="{'hidden': !$store.main.isMobile &&   $store.resizable.isVisible('cart-desktop')}"
 >
     <div
-        class="contents"
+        class="contents text-text-50"
         x-show="!isCartVisible"
     >
         <span
