--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-button.phtml
@@ -27,7 +27,7 @@ $block->setData('cache_tags', $blockCacheViewModel->collectBlockChildrenCacheTag
     tabindex="2"
 >
     <div
-        class="contents"
+        class="contents text-text-50"
         x-show="!isMenuVisible"
     >
         <?= $hyvaicons->renderHtml('menu') ?>
