Fix image banner style on preview

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-banner.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-banner.style.less
@@ -151,6 +151,59 @@
   width: 16px;
 }
 
+@media (max-width: 768px) {
+  .image-banner__container-sm-top-left {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .image-banner__container-sm-top-center {
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .image-banner__container-sm-top-right {
+    align-items: flex-start;
+    justify-content: flex-end;
+  }
+  .image-banner__container-sm-middle-left {
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .image-banner__container-sm-middle-center {
+    align-items: center;
+    justify-content: center;
+  }
+  .image-banner__container-sm-middle-right {
+    align-items: center;
+    justify-content: flex-end;
+  }
+  .image-banner__container-sm-bottom-left {
+    align-items: flex-end;
+    justify-content: flex-start;
+  }
+  .image-banner__container-sm-bottom-center {
+    align-items: flex-end;
+    justify-content: center;
+  }
+  .image-banner__container-sm-bottom-right {
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+
+  .image-banner__content-sm-top-left,
+  .image-banner__content-sm-middle-left,
+  .image-banner__content-sm-bottom-left {
+    align-items: flex-start;
+    text-align: start;
+  }
+
+  .image-banner__content-top-right,
+  .image-banner__content-middle-right,
+  .image-banner__content-bottom-right {
+    align-items: flex-end;
+    text-align: end;
+  }
+}
+
 @media (min-width: 768px) {
   .image-banner__container-top-left {
     align-items: flex-start;
