--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-image-banner/default/preview.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-image-banner/default/preview.html
@@ -39,11 +39,11 @@
     </div>
     <div
         class="image-banner__container"
-        data-bind="css: 'image-banner__container-' + data.banner_height.attributes()['data-banner-height'] + ' image-banner__container-' + data.desktop_content_position.attributes()['data-desktop-position'] + ' image-banner__container-' + data.mobile_content_alignment.attributes()['data-mobile-alignment']"
+        data-bind="css: 'image-banner__container-' + data.banner_height.attributes()['data-banner-height'] + ' image-banner__container-' + data.desktop_content_position.attributes()['data-desktop-position'] + ' image-banner__container-sm-' + data.mobile_content_alignment.attributes()['data-mobile-alignment']"
     >
         <div
             class="image-banner__content"
-            data-bind="css: 'image-banner__content-' + data.desktop_content_position.attributes()['data-desktop-position'] + ' image-banner__content-' + data.mobile_content_alignment.attributes()['data-mobile-alignment']"
+            data-bind="css: 'image-banner__content-' + data.desktop_content_position.attributes()['data-desktop-position'] + ' image-banner__content-sm-' + data.mobile_content_alignment.attributes()['data-mobile-alignment']"
         >
             <h2
                 class="image-banner__title"
